# upf-edge

./: Cargo.toml  README.md  rust-toolchain.toml
configs/: sim-default.toml
docs/: PFCP_NOTES.md  RUNBOOK.md
pfcp-common/: Cargo.toml
pfcp-common/src/: builder.rs  dict.rs  dict_ext.rs  dump.rs  header.rs  ie.rs  lib.rs  messages.rs  types.rs
scripts/: bootup.sh  setup-net.sh  shutdown.sh
smf-sim/: Cargo.toml
smf-sim/configs/: sim-A.toml  sim-B.toml  sim-default.toml
smf-sim/src/: config.rs  keepalive.rs  main.rs  state.rs  transport.rs  validator.rs
smf-sim/src/scenario/: basic_lifecycle.rs  mod.rs
smf-sim/src/tui/: app.rs  command.rs  mod.rs  runner.rs  tui.rs
upf-edge/: Cargo.toml  build.rs
upf-edge-common/: Cargo.toml
upf-edge-common/src/: lib.rs
upf-edge-ebpf/: Cargo.toml
upf-edge-ebpf/src/: _main copy.rs  gtpu.rs  lib.rs  main.rs
upf-edge/configs/: upf-edge-default copy.toml  upf-edge-default.toml
upf-edge/src/: association.rs  config.rs  handle_msg.rs  main.rs  pfcp_server.rs  session_store.rs  urr_reporter.rs
upf-edge/src/metrics/: exporter.rs  mod.rs  session_stats.rs
upf-edge/src/tui/: app.rs  command.rs  mod.rs  runner.rs  ui.rs
