[workspace]
resolver = "2"
members = [
    "upf-edge",
    "upf-edge-common",
    "upf-edge-ebpf",
    "pfcp-common",
    "smf-sim",
]
default-members = [
    "upf-edge",
    "upf-edge-common",
    "pfcp-common",
    "smf-sim",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }

clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
futures    = "0.3"
sysinfo    = "0.33"
parking_lot = "0.12"

# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
# clap = { version = "4.5.20", default-features = false, features = ["std"] }
# env_logger = { version = "0.11.5", default-features = false }
# libc = { version = "0.2.159", default-features = false }
# log = { version = "0.4.22", default-features = false }
# tokio = { version = "1.40.0", default-features = false }
# which = { version = "6.0.0", default-features = false }

[profile.release.package.upf-edge-ebpf]
debug = 2
codegen-units = 1
strip = false
