[package]
name = "smf-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pfcp-common = { path = "../pfcp-common" }
tokio = { version = "1.52.3", features = ["full"] }
serde = { workspace = true }
toml = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
chrono = "0.4.44"

ratatui = "0.29"
# crossterm = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

tui-textarea = { version = "0.7", features = ["crossterm"] }

parking_lot = "0.12"
futures = "0.3"
socket2 = { version = "0.5", features = ["all"] }
